--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 html{
     height:0px;
+    width:0px;
 }
 body {
     
     font-size: 1.5rem;
     font-family: sans-serif;
     line-height: 150%;
-
+    margin: 0;
+    padding: 0;
 }
 .loginbuttons{
     margin-left: 80%;
@@ -21,8 +23,14 @@ a{
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 900;
+    transition: color 200ms ease-in 10ms;
 
 }
+a:hover{
+    color:#ce1ce5b4;
+}
+
+
   
 div {
     height: 100%;
@@ -58,7 +66,8 @@ h1 {
     font-size:64px;
     padding:25px;
     margin-left: 40%;
-  }
+}
+
 
 .textdesc{
     overflow: hidden;
